[gd_scene load_steps=7 format=3 uid="uid://c515pf471vy3k"]

[ext_resource type="Script" path="res://Prototyping/PrototypeGame.gd" id="1_rgqgc"]
[ext_resource type="PackedScene" uid="uid://cbej05v14rtms" path="res://Scenes/Enemy/Enemy.tscn" id="2_t6k24"]
[ext_resource type="PackedScene" uid="uid://beund7unw4rx4" path="res://Scenes/Player/Player.tscn" id="3_ikerl"]
[ext_resource type="PackedScene" uid="uid://npbjmbt4um60" path="res://Scenes/HUD/MainHUD/HUD.tscn" id="3_wqtu2"]
[ext_resource type="PackedScene" uid="uid://7lgbxm51b76s" path="res://Scenes/WorldMap/ExampleTileMap.tscn" id="4_okh0x"]

[sub_resource type="Curve2D" id="Curve2D_676rq"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -392, -384, 0, 0, 0, 0, 384, -384, 0, 0, 0, 0, 384, 384, 0, 0, 0, 0, -392, 384, 0, 0, 0, 0, -392, -384)
}
point_count = 5

[node name="ExampleLevelWithEnemy" type="Node2D"]
script = ExtResource("1_rgqgc")
enemy_scene = ExtResource("2_t6k24")

[node name="HUD" parent="." instance=ExtResource("3_wqtu2")]

[node name="Player" parent="." instance=ExtResource("3_ikerl")]
position = Vector2(131, 68)

[node name="RoughWorkTileMap" parent="." instance=ExtResource("4_okh0x")]
position = Vector2(1, -3)

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_676rq")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2(-392, -384)

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="build_requested" from="Player" to="RoughWorkTileMap" method="_on_player_build_requested"]
[connection signal="health_changed" from="Player" to="HUD" method="_on_player_health_changed"]
[connection signal="mode_changed" from="Player" to="HUD" method="_on_player_mode_changed"]
[connection signal="mode_changed" from="Player" to="RoughWorkTileMap" method="_on_player_mode_changed"]
[connection signal="ready" from="Player" to="HUD" method="_on_player_ready"]
